<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/dialog_radius_dark"
        android:paddingTop="5dp">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="10dp"

                        app:srcCompat="@drawable/ic_subscribe" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="50dp"
                        android:gravity="center|start"
                        android:text="@string/premium_title"

                        android:textSize="14dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="13dp"
                android:text="@string/description_subsribte"

                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="7dp"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_file_download" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:text="@string/download_premium_content"

                        android:textSize="14dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="7dp"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_media_play_dark" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:text="@string/play_premium_content"

                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:padding="8dp"
                    android:tint="#ccc"
                    app:srcCompat="@drawable/ic_stop_ads" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|start"
                        android:text="@string/text_no_ads_title"

                        android:textSize="14dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relative_layout_watch_ads"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/gradient_dialog_btn_ads"
                android:visibility="gone">

                <TextView
                    android:id="@+id/text_view_watch_ads"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/watch_video_ads_to_unlock"
                    android:textAlignment="center"

                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorAccent">

                <TextView
                    android:id="@+id/text_view_go_pro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/subscribe_now"
                    android:textAlignment="center"

                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>