<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.movieboxtv.app.ui.activities.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/ActionBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:elevation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBarLayout"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:padding="30dp"
                android:src="@drawable/ic_email" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/support_input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_email"
                    android:textColorHint="@color/colorAccent"
                    app:boxStrokeColor="@color/colorAccent"
                    app:boxStrokeErrorColor="@color/red"
                    app:errorTextColor="@color/red"
                    app:helperTextTextColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/support_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/color_cursor_white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/support_input_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_name"
                    android:textColorHint="@color/colorAccent"
                    app:boxStrokeColor="@color/colorAccent"
                    app:boxStrokeErrorColor="@color/red"
                    app:errorTextColor="@color/red"
                    app:helperTextTextColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/support_input_name"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:inputType="textPersonName"
                        android:lines="1"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/color_cursor_white" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/support_input_layout_message"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_message"
                    android:textColorHint="@color/colorAccent"
                    app:boxStrokeColor="@color/colorAccent"
                    app:boxStrokeErrorColor="@color/red"
                    app:errorTextColor="@color/red"
                    app:helperTextTextColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/support_input_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="7"
                        android:minLines="4"
                        android:textSize="14sp"
                        android:textColor="@color/colorAccent"
                        android:textCursorDrawable="@drawable/color_cursor_white" />

                </com.google.android.material.textfield.TextInputLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_loading_subtitles_accent">

                    <RelativeLayout
                        android:id="@+id/relative_layout_support_activity_send"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:padding="10dp"
                            app:srcCompat="@drawable/ic_send"
                            app:tint="@color/white" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="50dp"
                            android:gravity="center"
                            android:text="@string/send_support"
                            android:textColor="@color/white"

                            android:textSize="7pt"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </RelativeLayout>


            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
